--- a/EscapeBox/index.html
+++ b/EscapeBox/index.html
@@ -4,7 +4,9 @@
     <head>
       <!-- SCROLLS -->
       <!-- load bootstrap and fontawesome via CDN -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"-->
+      <link href='styles/bootstrap.min.css' rel='stylesheet' integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
       <link href='styles/main.css' rel='stylesheet' type="text/css">
       <script src="node_modules/angular/angular.min.js"></script>
       <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -17,11 +19,13 @@
 
       <script type="text/javascript" src="node_modules/ng-audio/dist/ng-audio.min.js"></script>
 
-      <script src="//colthreepv.github.io/angular-media-player/dist/angular-media-player.min.js" type="text/javascript"></script>
+      <!--script src="//colthreepv.github.io/angular-media-player/dist/angular-media-player.min.js" type="text/javascript"></script-->
 
 
 
       <!--script src="bower_components/angular-timer/dist/angular-timer.min.js" ></script-->
+      <script src="scripts/angular-media-player.min.js" type="text/javascript"></script>
+
       <script src="scripts/directives/efeitos.js" type="text/javascript"></script>
       <script src="scripts/directives/dicas.js" type="text/javascript"></script>
       <script src="scripts/directives/alertas.js" type="text/javascript"></script>
